# amgix-server

./: .dockerignore  .gitignore  CLA.md  README.md  build-images.sh  docker-compose-mariadb.yml  docker-compose-pgsql.yml  docker-compose-qdrant.yml  docker-compose.ci.yml  pytest.ini  run_tests.sh
.github/workflows/: build-containers.yml  cla.yml  clear-vm-request.yml  signal-vm.yml  tests.yml
compose/: ci.yml  mariadb.cnf  mariadb.yml  nginx-api-proxy.conf  pgsql.yml  postgresql.conf  qdrant.yml  test-m.yml  test-p.yml  test-q.yml
compose/examples/: simple.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/client/: client.yaml  export_openapi.py  generate-client.sh  openapi-downgrade.py
dashboard/src/: api-key-gate.ts  api-key.ts  cytoscape-node-html-label.d.ts  error-bar.ts  main.ts  panel-nav.ts  route-hash.ts  style.css  theme.ts
libs/analyzers/: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  verify_wmtr_parity.py
libs/analyzers/src/: lib.rs
signatures/version1/: cla.json
src/api/: api_metrics.py  auth.py  main.py  prometheus_metrics.py  requirements.txt
src/encoder/: embed_router_service.py  encoder.py  encoder_base.py  model_rebalancer.py  requirements-common.txt  requirements-fe-cpu.txt  requirements-fe-gpu.txt  requirements-st-cpu.txt  requirements-st-gpu.txt  (+1 more)
tests/: README.md  README_BACKEND_AGNOSTIC.md  conftest.py  requirements.txt  test_api_integration.py  test_max_length_integration.py  test_model_validation.py  test_simple_api.py  test_validation.py
(+93 files in other folders)
