#[ Final unified pyproject ]
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "amgix-analyzers"
version = "1.0.0"
requires-python = ">=3.8"
description = "High-performance WMTR/FTS/trigram analyzers for Amgix (Rust + PyO3)"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "amgix_analyzers"

